# aptos-faucet-service

./: .gitignore  Cargo.toml  README.md  env.example
config/: default.toml
core/: Cargo.toml
core/src/: config.rs  lib.rs  logging.rs  models.rs  queue.rs  rate_limit.rs  repository.rs  service.rs
core/src/db/: memory.rs  mod.rs  mongodb.rs  postgres.rs
dc-bot/: Cargo.toml
dc-bot/src/: main.rs
frontend/: README.md  env.example  index.html  package.json  start.sh  tailwind.config.js  test-google-config.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  LoadingSpinner.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  googleAuth.ts
frontend/src/pages/: AdminPage.tsx  HomePage.tsx  LandingPage.tsx  LoginPage.tsx  TestLoginPage.tsx
frontend/src/types/: index.ts
reporting/: Cargo.toml
reporting/src/: main.rs
tg-bot/: Cargo.toml
tg-bot/src/: main.rs
web/: Cargo.toml
web/src/: auth.rs  error.rs  jwt.rs  main.rs  session.rs
