[package]
name = "reporting"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
faucet-core = { package = "core", path = "../core" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
